--- a/app/src/main/res/layout/item_advice.xml
+++ b/app/src/main/res/layout/item_advice.xml
@@ -26,7 +26,9 @@
         android:layout_height="wrap_content"
         android:text="Advice Title"
         android:textColor="@color/black"
-        android:textSize="16sp"
+        android:textSize="12sp"
+        android:maxLines="1"
+        android:ellipsize="end"
         android:textStyle="bold"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="8dp"
@@ -40,7 +42,7 @@
         android:layout_height="wrap_content"
         android:text="Scurtă descriere despre sfat, max 2 linii."
         android:textColor="@color/black"
-        android:textSize="13sp"
+        android:textSize="10sp"
         android:ellipsize="end"
         android:maxLines="2"
         android:layout_marginStart="16dp"
